# miyuki_translator

./: Doxyfile  README.md
docs/: documentation_write_extension.en.md  documentation_write_extension.md  external_feature_meta_sample.json  guidance-obtain-account.en.md  guidance-obtain-account.zh.md
examples/sample_extension/: CMakeLists.txt
examples/sample_extension/src/: plugin_main.cpp
include/: SettingUtils.h  TranslateUtils.h  ac_common.h  ac_database.h  ac_feature_core.h  ac_settings.h  md5.h  sqlite3.h
lib/: libmiyukiext.dylib
